[package]
name = "err_tools"
version = "0.2.1"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
license = "MIT"
description = "Helper traits and functions for building errors in rust"
repository = "https://github.com/storyfeet/err_tools"
keywords=["error","simple","traits","wrappers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="err_tools"
path="src/lib.rs"

[dependencies]
anyhow = "1.0.31"
thiserror = "1.0.20"
